[gd_scene load_steps=9 format=3 uid="uid://dnme5m7aoe3i6"]

[ext_resource type="Texture2D" uid="uid://caoywqcoimjol" path="res://Assets/Entities/Obstacles/HRock.png" id="1_h7r8j"]
[ext_resource type="Script" path="res://Scripts/Entities/Rocks/MissleRock.gd" id="1_sn726"]
[ext_resource type="Texture2D" uid="uid://be2nb15yactia" path="res://Assets/Entities/Warning.png" id="2_bu211"]

[sub_resource type="CircleShape2D" id="CircleShape2D_n8a0d"]
radius = 13.0384

[sub_resource type="Animation" id="Animation_ymipr"]
resource_name = "Fade"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Warning sign:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_4601f"]
resource_name = "FadeBackwards"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Warning sign:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_4vjyb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Warning sign:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s3wnh"]
_data = {
"Fade": SubResource("Animation_ymipr"),
"FadeBackwards": SubResource("Animation_4601f"),
"RESET": SubResource("Animation_4vjyb")
}

[node name="MissileRock" type="Area2D"]
position = Vector2(406, 612)
collision_layer = 8
script = ExtResource("1_sn726")
metadata/_edit_group_ = true

[node name="MRock" type="Sprite2D" parent="."]
position = Vector2(-4, 67)
texture = ExtResource("1_h7r8j")

[node name="MRockCol" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_n8a0d")

[node name="Warning sign" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(-1, -3)
scale = Vector2(2, 2)
texture = ExtResource("2_bu211")

[node name="WarningAnim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_s3wnh")
}

[node name="RockSpawnTimer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="WarningAnim" to="." method="_on_warning_anim_animation_finished"]
[connection signal="timeout" from="RockSpawnTimer" to="." method="_on_rock_spawn_timer_timeout"]
